# fastapi-microsservices

./: auth_service.py  order_service.py  product_service.py  pyproject.toml
