[tool.poetry]
name = "fastapi-microsservices"
version = "0.1.0"
description = ""
authors = ["adryell <adryellpaulo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
requests = "^2.32.3"
uvicorn = "^0.34.0"
jwt = "^1.3.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
